fix(navbar): show navbar on top of other elements via z-index 50

--- a/styl/navbar.styl
+++ b/styl/navbar.styl
@@ -23,6 +23,7 @@ sm-navbar($bgcolor = $primary-color, $font-color = $light-text-color, $padding =
 
   if $fixed
     position: fixed
+    z-index: 50
     top: 0
     width: 100%
 
